refactor(tableGroup): 테이블개수를 검증하는 로직 도메인으로 위임